--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -1,4 +1,4 @@
-auto_save: false
+auto_save: true
 display_label_popup: true
 instance_label_auto_increment: true
 store_data: true
@@ -44,13 +44,13 @@ fit_to_content:
 epsilon: 10.0
 
 shortcuts:
-  close: Ctrl+W
+  close: null
   open: Ctrl+O
   open_dir: Ctrl+U
   quit: Ctrl+Q
-  save: Ctrl+S
+  save: S
   save_as: Ctrl+Shift+S
-  save_to: null
+  save_to: E
   delete_file: Ctrl+Delete
 
   open_next: [D, Ctrl+Shift+D]
@@ -68,7 +68,7 @@ shortcuts:
   create_circle: null
   create_line: null
   create_point: null
-  create_linestrip: null
+  create_linestrip: Ctrl+W
   edit_polygon: Ctrl+J
   delete_polygon: Delete
   duplicate_polygon: Ctrl+D
